# kedro-tutorial

./: README.md
spaceflights/: README.md  pyproject.toml  requirements.txt
spaceflights/.viz/: stats.json
spaceflights/conf/base/: catalog.yml  parameters_data_science.yml
spaceflights/conf/test/: catalog.yml
spaceflights/notebooks/: data-exploration.ipynb  first-exploration.ipynb  model-training.ipynb
spaceflights/src/spaceflights/: __main__.py
spaceflights/src/spaceflights/pipelines/data_processing/: nodes.py  pipeline.py
spaceflights/src/spaceflights/pipelines/data_science/: nodes.py  pipeline.py
